// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list properly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={
      Array [
        Object {
          "amount": 500,
          "createdAt": 0,
          "description": "bill",
          "id": "1",
          "note": "",
        },
        Object {
          "amount": 50000,
          "createdAt": -345600000,
          "description": "rent",
          "id": "2",
          "note": "",
        },
        Object {
          "amount": 5000,
          "createdAt": 345600000,
          "description": "credit",
          "id": "3",
          "note": "",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ExpenseListItem
          data={
            Object {
              "amount": 500,
              "createdAt": 0,
              "description": "bill",
              "id": "1",
              "note": "",
            }
          }
        />,
        <ExpenseListItem
          data={
            Object {
              "amount": 50000,
              "createdAt": -345600000,
              "description": "rent",
              "id": "2",
              "note": "",
            }
          }
        />,
        <ExpenseListItem
          data={
            Object {
              "amount": 5000,
              "createdAt": 345600000,
              "description": "credit",
              "id": "3",
              "note": "",
            }
          }
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "function",
        "props": Object {
          "data": Object {
            "amount": 500,
            "createdAt": 0,
            "description": "bill",
            "id": "1",
            "note": "",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "function",
        "props": Object {
          "data": Object {
            "amount": 50000,
            "createdAt": -345600000,
            "description": "rent",
            "id": "2",
            "note": "",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "function",
        "props": Object {
          "data": Object {
            "amount": 5000,
            "createdAt": 345600000,
            "description": "credit",
            "id": "3",
            "note": "",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ExpenseListItem
            data={
              Object {
                "amount": 500,
                "createdAt": 0,
                "description": "bill",
                "id": "1",
                "note": "",
              }
            }
          />,
          <ExpenseListItem
            data={
              Object {
                "amount": 50000,
                "createdAt": -345600000,
                "description": "rent",
                "id": "2",
                "note": "",
              }
            }
          />,
          <ExpenseListItem
            data={
              Object {
                "amount": 5000,
                "createdAt": 345600000,
                "description": "credit",
                "id": "3",
                "note": "",
              }
            }
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "function",
          "props": Object {
            "data": Object {
              "amount": 500,
              "createdAt": 0,
              "description": "bill",
              "id": "1",
              "note": "",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "function",
          "props": Object {
            "data": Object {
              "amount": 50000,
              "createdAt": -345600000,
              "description": "rent",
              "id": "2",
              "note": "",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "function",
          "props": Object {
            "data": Object {
              "amount": 5000,
              "createdAt": 345600000,
              "description": "credit",
              "id": "3",
              "note": "",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`should render expense list with empty message 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExpenseList
    expenses={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <p>
        No expenses
      </p>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "No expenses",
      },
      "ref": null,
      "rendered": "No expenses",
      "type": "p",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <p>
          No expenses
        </p>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No expenses",
        },
        "ref": null,
        "rendered": "No expenses",
        "type": "p",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
